--- a/DesafioSemana9/appsettings.json
+++ b/DesafioSemana9/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProductConnection": "server=localhost;database=products;user=mysql;password=mysql"
+    "ProductConnection": "server=localhost;database=products;user=root;password=adm123"
   }
 }
